Add TexturePicker for SpriteComponentRenderer